--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
             </nav>
             <h1>ما نقدم</h1>
             <a href="index.html" class="btn">العودة إلى الصفحة الرئيسية</a>
+            <a href="https://linktr.ee/mgkasm" class="btn"> مواقع التواصل</a>
         </div>
     </header>
 
