--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <h1>مرحبا بك في سيرفرنا على ديسكورد!</h1>
             <p>انضم إلينا لتجربة مميزة في مجتمعنا النابض بالحياة!</p>
             <a href="about.html" class="btn">تعرف أكثر</a>
+            <a href="https://linktr.ee/mgkasm" class="btn"> مواقع التواصل</a>
         </div>
     </header>
 
