--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             </nav>
             <h1>مرحبا بك في سيرفرنا على ديسكورد!</h1>
             <p>انضم إلينا لتجربة مميزة في مجتمعنا النابض بالحياة!</p>
-            <a href="about.html" class="btn">تعرف أكثر</a>
             <a href="https://linktr.ee/mgkasm" class="btn"> مواقع التواصل</a>
+            <a href="about.html" class="btn">تعرف أكثر</a>
+            <a href="https://rdsi88.github.io/MGKASM2/" class="btn"> بعض صور كرافت</a>
         </div>
     </header>
 
